--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
       </div>
     </div>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
     <script type="module">
       import { auth, isAdmin } from './js/firebase-config.js';
       import { 
