--- a/post.html
+++ b/post.html
@@ -625,8 +625,8 @@
               <div class="author-info">
                 <h4>Connor Hill</h4>
                 <p>
-                  iOS developer passionate about crafting awesome mobile experiences. 
-                  I write about SwiftUI, UIKit, and everything in between. 
+                  An iOS developer passionate about crafting awesome mobile experiences. 
+                  I write about Swift, Computer Science related topics, and everything in between. 
                   Currently building apps that prioritize performance and user experience.
                 </p>
               </div>
