--- a/admin.html
+++ b/admin.html
@@ -497,7 +497,7 @@
               <h3>${post.title}</h3>
               <div class="post-meta-info">
                 <span class="pill">${post.category}</span>
-                <span class="read-time-badge">📖 ${post.readTime}</span>
+                <span class="read-time-badge">${post.readTime}</span>
                 <span>${post.date}</span>
               </div>
             </div>
