--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <h1>Sharing my coding journey through polished iOS experiences.</h1>
           <p class="hero-description">
             A modern space to document lessons learned, showcase shipped apps,
-            and connect with developers who care about craftsmanship.
+            and connect with developers who care about the craft.
           </p>
           <div class="hero-cta">
             <button class="primary-button" type="button" id="joinBlogBtn" onclick="window.location.href='#settings'">Join the Blog</button>
