--- a/index.html
+++ b/index.html
@@ -89,12 +89,9 @@
           <div class="content-grid">
             <article class="card project-card">
               <a href="https://apps.apple.com/us/app/perk-punch/id6746662386" target="_blank" class="project-icon-link">
-                <img
-                  class="project-icon app-icon"
-                  data-app-id="6746662386"
-                  src="https://via.placeholder.com/120/3579ff/ffffff?text=PP"
-                  alt="Perk Punch app icon"
-                />
+                <div class="project-icon-placeholder app-icon-perk">
+                  <span style="font-size: 36px; font-weight: 800; color: white;">PP</span>
+                </div>
               </a>
               <h3>
                 <a href="https://apps.apple.com/us/app/perk-punch/id6746662386" target="_blank">Perk Punch</a>
@@ -108,12 +105,9 @@
             </article>
             <article class="card project-card">
               <a href="https://apps.apple.com/us/app/bookworm/id6738531588" target="_blank" class="project-icon-link">
-                <img
-                  class="project-icon app-icon"
-                  data-app-id="6738531588"
-                  src="https://via.placeholder.com/120/ff6b6b/ffffff?text=BW"
-                  alt="BookWorm! app icon"
-                />
+                <div class="project-icon-placeholder app-icon-bookworm">
+                  <span style="font-size: 36px; font-weight: 800; color: white;">BW</span>
+                </div>
               </a>
               <h3>
                 <a href="https://apps.apple.com/us/app/bookworm/id6738531588" target="_blank">BookWorm!</a>
@@ -127,12 +121,9 @@
             </article>
             <article class="card project-card">
               <a href="https://apps.apple.com/us/app/auto-do-it/id6670796120" target="_blank" class="project-icon-link">
-                <img
-                  class="project-icon app-icon"
-                  data-app-id="6670796120"
-                  src="https://via.placeholder.com/120/4ecdc4/ffffff?text=ADI"
-                  alt="Auto Do It app icon"
-                />
+                <div class="project-icon-placeholder app-icon-autodoit">
+                  <span style="font-size: 32px; font-weight: 800; color: white;">ADI</span>
+                </div>
               </a>
               <h3>
                 <a href="https://apps.apple.com/us/app/auto-do-it/id6670796120" target="_blank">Auto Do It</a>
