--- a/index.html
+++ b/index.html
@@ -89,9 +89,11 @@
           <div class="content-grid">
             <article class="card project-card">
               <a href="https://apps.apple.com/us/app/perk-punch/id6746662386" target="_blank" class="project-icon-link">
-                <div class="project-icon-placeholder app-icon-perk">
-                  <span style="font-size: 36px; font-weight: 800; color: white;">PP</span>
-                </div>
+                <img
+                  class="project-icon"
+                  src="images/perk-punch-icon.png"
+                  alt="Perk Punch app icon"
+                />
               </a>
               <h3>
                 <a href="https://apps.apple.com/us/app/perk-punch/id6746662386" target="_blank">Perk Punch</a>
@@ -105,9 +107,11 @@
             </article>
             <article class="card project-card">
               <a href="https://apps.apple.com/us/app/bookworm/id6738531588" target="_blank" class="project-icon-link">
-                <div class="project-icon-placeholder app-icon-bookworm">
-                  <span style="font-size: 36px; font-weight: 800; color: white;">BW</span>
-                </div>
+                <img
+                  class="project-icon"
+                  src="images/bookworm-icon.png"
+                  alt="BookWorm! app icon"
+                />
               </a>
               <h3>
                 <a href="https://apps.apple.com/us/app/bookworm/id6738531588" target="_blank">BookWorm!</a>
@@ -121,9 +125,11 @@
             </article>
             <article class="card project-card">
               <a href="https://apps.apple.com/us/app/auto-do-it/id6670796120" target="_blank" class="project-icon-link">
-                <div class="project-icon-placeholder app-icon-autodoit">
-                  <span style="font-size: 32px; font-weight: 800; color: white;">ADI</span>
-                </div>
+                <img
+                  class="project-icon"
+                  src="images/auto-do-it-icon.png"
+                  alt="Auto Do It app icon"
+                />
               </a>
               <h3>
                 <a href="https://apps.apple.com/us/app/auto-do-it/id6670796120" target="_blank">Auto Do It</a>
