--- a/index.html
+++ b/index.html
@@ -168,18 +168,14 @@
         <!-- Other Section -->
         <div class="portfolio-section">
           <h3 class="portfolio-section-title">Other Projects</h3>
-          <div class="content-grid">
-            <article class="card project-card">
-              <div class="project-icon-placeholder other-icon">
-                <span style="font-size: 32px; font-weight: 700; color: white;">OSS</span>
-              </div>
-              <h3>Open Source Contributions</h3>
-              <p>Various contributions to iOS development tools and libraries on GitHub.</p>
-              <div class="project-tags">
-                <span>Open Source</span>
-                <span>GitHub</span>
-              </div>
-            </article>
+          <div class="card" style="text-align: center; padding: 40px;">
+            <p style="color: var(--text-secondary); margin-bottom: 24px; font-size: 16px;">
+              No projects here yet, but feel free to check out more of my projects on GitHub!
+            </p>
+            <a href="https://github.com/ConnorJamesHill" target="_blank" class="primary-button" style="text-decoration: none; display: inline-flex; align-items: center; gap: 8px;">
+              View GitHub Profile
+              <span style="font-size: 18px;">→</span>
+            </a>
           </div>
         </div>
       </section>
