--- a/index.html
+++ b/index.html
@@ -151,16 +151,46 @@
           <div class="content-grid">
             <article class="card project-card">
               <div class="project-icon-placeholder website-icon">
-                <span style="font-size: 32px; font-weight: 700; color: white;">WEB</span>
+                <span style="font-size: 32px; font-weight: 700; color: white;">CB</span>
               </div>
               <h3>
                 <a href="#" target="_blank">Connor Hill's Blog</a>
               </h3>
-              <p>Personal blog and portfolio built with vanilla HTML, CSS, and JavaScript. Firebase backend for comments and auth.</p>
+              <p>Personal blog and portfolio built from scratch with vanilla HTML, CSS, and JavaScript. Firebase backend for comments and auth.</p>
               <div class="project-tags">
                 <span>Web</span>
                 <span>Firebase</span>
                 <span>Blog</span>
+              </div>
+            </article>
+
+            <article class="card project-card">
+              <div class="project-icon-placeholder website-icon">
+                <span style="font-size: 32px; font-weight: 700; color: white;">SS</span>
+              </div>
+              <h3>
+                <a href="https://seefsavage.netlify.app/" target="_blank">Seef Savage</a>
+              </h3>
+              <p>Professional website for a YouTube content creator featuring gaming content and community engagement. Built from scratch with modern web technologies.</p>
+              <div class="project-tags">
+                <span>Web</span>
+                <span>YouTube</span>
+                <span>Gaming</span>
+              </div>
+            </article>
+
+            <article class="card project-card">
+              <div class="project-icon-placeholder website-icon">
+                <span style="font-size: 32px; font-weight: 700; color: white;">CH</span>
+              </div>
+              <h3>
+                <a href="https://connorjhill.netlify.app/" target="_blank">Connor Hill Portfolio</a>
+              </h3>
+              <p>Personal portfolio website showcasing iOS development projects and skills. Fully responsive design built from scratch with vanilla web technologies.</p>
+              <div class="project-tags">
+                <span>Web</span>
+                <span>Portfolio</span>
+                <span>Responsive</span>
               </div>
             </article>
           </div>
