--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               <h3>
                 <a href="#" target="_blank">Connor Hill's Blog</a>
               </h3>
-              <p>Personal blog and portfolio built from scratch with vanilla HTML, CSS, and JavaScript. Firebase backend for comments and auth.</p>
+              <p>Personal blog and portfolio built from scratch with vanilla HTML, CSS, and JavaScript. Firebase backend for comments and authentication.</p>
               <div class="project-tags">
                 <span>Web</span>
                 <span>Firebase</span>
