--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         <div class="hero-card">
           <h2>Newsletter Highlights</h2>
           <p>
-            New blog posts and project launches are delivered straight to your
-            inbox. Confirm your email within 24 hours to activate alerts.
+            New blog posts and project launches are delivered straight to your inbox.
           </p>
           <div class="email-tags">
             <span>New Posts</span>
